--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,7 @@ nav ul li a i {
 	nav ul li ul li a{
 		font-size: 16px;
 	}
+
 }
 
 
@@ -533,7 +534,7 @@ h2 a:hover {
 }
 
 h4 {
-	font-weight: 400;
+	font-weight: 500;
 	font-size: 22px;
 }
 
@@ -554,6 +555,7 @@ h4 {
 	-ms-flex-item-align: center;
 	    -ms-grid-row-align: center;
 	    align-self: center;
+	    text-align: center;
 }
 
 h3 {
@@ -863,19 +865,13 @@ h2 a i {
 
 @media only screen and (max-width: 1200px) {
 
-	body {
-		margin-top: 40px;
-	}
-
 	.container {
-		width: 100vw;
-		height: 100vh;
-		padding: 0;
-		margin:0;
+		width: 85%;
+		margin:0 auto;
 	}
 
 	.jumbotron {
-		padding: 0px 100px;
+		padding: 50px 100px;
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
@@ -921,13 +917,8 @@ h2 a i {
 
 @media only screen and (max-width: 1000px) {
 
-	body {
-		margin-top: 40px;
-	}
-
-
 	.jumbotron {
-		padding: 0px 80px;
+		padding: 30px 70px;
 	}
 
 	.jumbotron h1 {
@@ -1031,13 +1022,9 @@ h2 a i {
 }
 
 @media only screen and (max-width: 780px) {
-	
-	body {
-		margin-top: 50px;
-	}
 
 	.jumbotron {
-		padding: 0px 50px;
+		padding: 20px 50px 10px 50px;
 	}
 
 	.jumbotron h1 {
@@ -1055,6 +1042,8 @@ h2 a i {
 	h2 a, h2, .h2blue{
 		font-size: 24px;
 	}
+
+
 
 	h4 {
 		font-size: 19px;
@@ -1103,6 +1092,212 @@ h2 a i {
 
 }
 
+@media only screen and (max-width: 510px) {
+
+	.jumbotron {
+		padding: 20px 30px 10px 30px;
+	}
+
+	.jumbotron h1 {
+	    font-size: 30px;
+	}
+
+	.jumbotron p {
+	  font-size: 15px;
+	}
+
+	.btn-primary {
+		 padding: 6px 12px;
+	}
+
+	h2 a, h2, .h2blue{
+		font-size: 20px;
+	}
+
+	.h2text {
+		width: 150px;
+		text-align: center;
+	}
+
+	h4 {
+		font-size: 14px;
+	}
+
+	p{
+		font-size: 13px;
+	}
+
+	.imgContainer {
+		width: 65%;
+		padding: 0px;
+
+	}
+
+	.imgContainer a {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+
+	}
+	
+	.flexColumn {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		flex-direction: column;
+		padding: 0;
+	}
+
+	.imgMDPlans2 {
+		width: 70%;
+		margin: 0;
+		align-self: center;
+	}
+
+	div h2 a i {
+		font-size: 22px;
+	}
+
+	.h2-blue:hover {	
+		padding: 5px 10px;
+	}
+
+	#resourcesImg {
+		width: 80%;
+		margin-top: 0px;
+		border-radius: 10px;
+	}
+
+	#seminarsImg {
+		width: 48%;
+		margin-top: 10px;
+		margin-bottom: 0;
+		border-radius: 10px;
+	}
+
+
+	.showcase-btn {
+		margin: 5px;
+		padding: 3px 5px;
+		 font-size: 12px;
+		 text-align: center;
+		 vertical-align: center;
+	}
+
+	div a i {
+		
+			font-size: 12px;
+		}
+}
+
+
+@media only screen and (max-width: 450px) {
+	body {
+		margin-top: 53px;
+	}
+
+	.container {
+		width: 90%;
+		margin:0 auto;
+	}
+
+	.jumbotron {
+		padding: 20px 20px 10px 20px;
+	}
+
+	.jumbotron h1 {
+	    font-size: 22px;
+	}
+
+	.jumbotron p {
+	  font-size: 12px;
+	}
+
+	.btn-primary {
+		 padding: 5px 10px;
+		 font-size: 13px;
+	}
+
+	h2 a, h2, .h2blue{
+		font-size: 16px;
+	}
+
+	h4 {
+		font-size: 13px;
+		font-weight:500;
+	}
+
+	p{
+		font-size: 12px;
+		font-weight: 400;
+	}
+
+	.imgContainer {
+		width: 90%;
+		padding: 0px;
+
+	}
+
+	.imgContainer a {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+
+	}
+	
+	.flexColumn {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		flex-direction: column;
+		padding: 0;
+	}
+
+	.imgMDPlans2 {
+		width: 70%;
+		margin: 0;
+		align-self: center;
+	}
+
+	div h2 a i {
+		font-size: 18px;
+	}
+
+	.h2-blue:hover {	
+		padding: 5px 8px;
+	}
+
+	#resourcesImg {
+		width: 90%;
+		margin-top: 0px;
+		border-radius: 10px;
+	}
+
+	#seminarsImg {
+		width: 55%;
+		margin-top: 10px;
+		margin-bottom: 0;
+		border-radius: 10px;
+	}
+
+
+	.showcase-btn {
+		margin: 5px;
+		padding: 3px 5px;
+		 font-size: 11px;
+		 text-align: center;
+		 vertical-align: center;
+	}
+
+	div a i {
+		
+			font-size: 11px;
+		}
+}
 /*  -- - - - -- -- - - - -- - -- --  FOOTER -- - - - -- -  -- -- - - - -- -  -- */
 
 
@@ -1435,11 +1630,11 @@ footer{
 @media only screen and (max-width: 430px) {
 
 	.form-control, #copyrightText {
-		font-size: 12px;
+		font-size: 11px;
 	}
 
 	.btn-submit {
-		font-size: 14px;
+		font-size: 13px;
 	}
 
 	.contactInfo {
@@ -1447,11 +1642,11 @@ footer{
 	} 
 
 	#h3Contact {
-		font-size: 16px;
+		font-size: 14px;
 	}
 
 	.contactContainer p, .contactContainer i {
-		font-size: 13px;
+		font-size: 11px;
 	}
 
 
