--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ margin-top: 60px;
 
 }
 
-
 /*------------------NAVBAR------------------*/
 
 .navTopContainer {
@@ -67,7 +66,7 @@ nav p a{
 	        align-items: center;
 	font-family:Poppins;
 	font-weight: 400;
-  	font-size: 18px;
+  	font-size: 20px;
 	height: 100%;
 }
 
@@ -120,8 +119,15 @@ nav ul li a {
 	font-family:Poppins;
 	font-size: 16px;
 	color: #fff;
-	padding: 14px  20px;
+	padding: 14px 15px;
 	text-decoration: none;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 nav ul li a:hover{
@@ -222,7 +228,11 @@ nav ul li a i {
 	 	padding: 0% 5%;
 	 }
 
-	nav p a, nav ul li a, nav ul li ul li a{
+	 nav p a {
+	 	font-size: 18px;
+	 }
+
+	nav ul li a, nav ul li ul li a{
 	  	font-size: 15px;
 		height: 100%;
 	}
@@ -272,11 +282,6 @@ nav ul li a i {
 	.navTopContainer {
 	 	padding: 0% 2%;
 	 }
-	
-	nav {
-		height: 43px;
-	}
-	 
 
 	 nav ul li a {
 		padding: 10px 14px;
@@ -308,7 +313,7 @@ nav ul li a i {
 }
 
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 900px) {
 
 	.toggle {
 		display: -webkit-box;
@@ -344,7 +349,7 @@ nav ul li a i {
 		        align-items: center;
 		font-family:Poppins;
 		font-weight: 400;
-	  	font-size: 22px;
+	  	font-size: 18px;
 		height: 100%;
 	}
 
@@ -383,7 +388,7 @@ nav ul li a i {
 
 
 	nav ul li a {
-		font-size: 20px;
+		font-size: 17px;
 		background-color: #2c6ccc;
 		/*width: 100%;*/
 		text-align: center;
@@ -462,7 +467,7 @@ nav ul li a i {
 	}
 
 	nav ul li ul li a{
-		font-size: 19px;
+		font-size: 15px;
 		text-align: left;
 	}
 
@@ -476,7 +481,7 @@ nav ul li a i {
 	}
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 400px) {
 
 	
 	.toggle a {
@@ -494,12 +499,12 @@ nav ul li a i {
 	}
 
 	nav ul li a {
-		font-size: 18px;	
+		font-size: 16px;	
 	}
 
 
 	nav ul li ul li a{
-		font-size: 16px;
+		font-size: 13px;
 	}
 
 }
@@ -1463,6 +1468,17 @@ input:focus, textarea:focus {
 	margin-bottom: 15px;
 	font-size: 15px;
 	font-family:Poppins;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+}
+
+.eachContactInfo {
+	align-self: center;
 }
 
 textarea.form-control {
