--- a/css/style.css
+++ b/css/style.css
@@ -1028,6 +1028,15 @@ h2 a i {
 
 @media only screen and (max-width: 780px) {
 
+	.row {
+		padding: 0px;
+	}
+
+	.showcase {
+		width: 90%;
+		padding: 0px 20px 20px 20px;
+	}
+
 	.jumbotron {
 		padding: 20px 50px 10px 50px;
 	}
@@ -1474,11 +1483,16 @@ input:focus, textarea:focus {
 	display: -o-flex;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	text-align: center;
 }
 
 .eachContactInfo {
 	align-self: center;
+}
+
+.contactInfo p i {
+	margin-right: 4px;
 }
 
 textarea.form-control {
@@ -1562,7 +1576,6 @@ footer{
 }
 
 
-
 /*  - - - --- - -- - -- - - - - - FOOTER Responsive Design --- - - - - - - - - - - - - - -- - */
 
 
@@ -1602,6 +1615,10 @@ footer{
 		width: 60%;
 	}
 
+	.contactInfo p i {
+		font-size: 13px;
+	}
+
 	.contactContainer p {
 		font-size: 15px;
 	}
@@ -1632,25 +1649,69 @@ footer{
 }
 
 @media only screen and (max-width: 620px) {
+	form {	
+		width: 90%;
+	}
+
+	.form-control {
+	    padding: 5px 8px;
+	    color: #2c6ccc;
+	    width: 90%;
+	    display: -webkit-box;
+	    display: -ms-flexbox;
+	    display: flex;
+	    height: 30px;
+	    padding: 4px 8px;
+	    font-size: 10px;
+	}
+
+	.grouping i {
+		font-size: 14px;
+	}
+
+	.contactInfo {
+		width: 90%;
+		padding: 20px;
+	}
+
+	.contactInfo h3 {
+		font-size: 15px;
+	}
+
+	.btn-submit {
+		font-size: 12px;
+	}
+}
+
+
+@media only screen and (max-width: 500px) {
+
 	form {
-		height: 200px;
 		width: 100%;
+		height: auto;
 	}
 
 	.contactInfo {
 		width: 100%;
-		padding: 20px;
 	}
-}
 
-@media only screen and (max-width: 430px) {
+	.contactContainer p {
+		font-size: 11px;
+		margin-bottom: 10px
+	}
 
 	.form-control, #copyrightText {
 		font-size: 11px;
+		margin: 0;
 	}
 
-	.btn-submit {
-		font-size: 13px;
+	textarea.form-control {
+		height: 70px;
+		margin: 0;
+	}
+
+	.btn-submit, .grouping i, .width100 i {
+		font-size: 11px;
 	}
 
 	.contactInfo {
@@ -1658,12 +1719,29 @@ footer{
 	} 
 
 	#h3Contact {
-		font-size: 14px;
+		font-size: 12px;
 	}
 
-	.contactContainer p, .contactContainer i {
+	.contactInfo p i {
 		font-size: 11px;
 	}
 
+	.form-group {
+		flex-direction: column;
+		justify-content: center;
+		width: 100%;
+	}
+
+	#contactPhone, #contactEmail, #contactName, #contactMessage {
+		margin-bottom: 5px;
+	}
+
+	.grouping {
+		width: 100%;
+	}
+
+	#contactName, #contactPhone {
+		width: 90%;
+	}
 
 }
