--- a/css/style.css
+++ b/css/style.css
@@ -695,11 +695,11 @@ main {
 }
 
 .col-30 {
-	width: 40%;
+	width: 50%;
 }
 
 .col-70 {
-	width: 60%;
+	width: 50%;
 	/*padding: 0px 10px; */
 }
 
@@ -846,6 +846,19 @@ main {
 	        box-shadow: 8px 8px 10px #aaaaaa;
 	vertical-align: middle;
 	border: 0px;
+}
+
+.video1 {
+	width: 100%;
+	border-radius: 5px;
+	border: 2px rgba(247, 240, 242, 1) solid;
+}
+
+.video2 {
+	width: 100%;
+	margin-left: 30px;
+	border-radius: 5px;
+	border: 2px rgba(247, 240, 242, 1) solid;
 }
 
 h2 a i {
