--- a/css/style.css
+++ b/css/style.css
@@ -935,6 +935,10 @@ h2 a i {
 
 @media only screen and (max-width: 1000px) {
 
+	.video2 {
+		margin-left: 0px;
+	}
+
 	.jumbotron {
 		padding: 30px 70px;
 	}
