--- a/css/style.css
+++ b/css/style.css
@@ -850,12 +850,14 @@ main {
 
 .video1 {
 	width: 100%;
+	height: 100%;
 	border-radius: 5px;
 	border: 2px rgba(247, 240, 242, 1) solid;
 }
 
 .video2 {
 	width: 100%;
+	height: 100%;
 	margin-left: 30px;
 	border-radius: 5px;
 	border: 2px rgba(247, 240, 242, 1) solid;
